Create Group working

--- a/app/src/main/res/layout/activity_split_expense.xml
+++ b/app/src/main/res/layout/activity_split_expense.xml
@@ -36,6 +36,21 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.659" />
 
+    <EditText
+        android:id="@+id/groupName"
+        android:layout_width="258dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="104dp"
+        android:ems="10"
+        android:hint="Description"
+        android:inputType="textPersonName"
+        android:textColor="#fafafa"
+        android:textColorHint="#9A9A9A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -94,33 +109,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:tint="@color/primary" />
 
+
     <TextView
         android:id="@+id/searchResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Test User"
+        android:visibility="invisible"
         android:textColor="@color/primary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.219"
+        app:layout_constraintHorizontal_bias="0.222"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchField" />
-
-    <EditText
-        android:id="@+id/groupName"
-        android:layout_width="258dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="104dp"
-        android:ems="10"
-        android:hint="Description"
-        android:inputType="textPersonName"
-        android:textColor="#fafafa"
-        android:textColorHint="#9A9A9A"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/submitButton"
@@ -135,6 +137,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/creatGroup"
         android:layout_width="254dp"
@@ -148,6 +151,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/submitBut"
         android:layout_width="254dp"
@@ -161,5 +165,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/imageButtonRed"-->
+<!--        android:layout_width="25dp"-->
+<!--        android:layout_height="25dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:backgroundTint="@color/dark"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/imageButtonGreen"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/searchField"-->
+<!--        app:srcCompat="@android:drawable/ic_delete" />-->
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/imageButtonGreen"-->
+<!--        android:layout_width="25dp"-->
+<!--        android:layout_height="25dp"-->
+<!--        android:layout_marginStart="40dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:backgroundTint="@color/dark"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/searchResult"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/searchField"-->
+<!--        app:srcCompat="@android:drawable/ic_input_add" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
