--- a/app/src/main/res/layout/activity_creat_group.xml
+++ b/app/src/main/res/layout/activity_creat_group.xml
@@ -33,20 +33,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/groupName" />
 
-    <EditText
-        android:id="@+id/searchField"
-        android:layout_width="205dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Search"
-        android:inputType="textPersonName"
-        android:textColor="#fafafa"
-        android:textColorHint="#9A9A9A"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.368"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
 
     <ImageButton
         android:id="@+id/search"
@@ -91,6 +78,20 @@
         app:layout_constraintHorizontal_bias="0.678"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+    <EditText
+        android:id="@+id/searchField"
+        android:layout_width="205dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Search"
+        android:inputType="textPersonName"
+        android:textColor="#fafafa"
+        android:textColorHint="#9A9A9A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.368"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/submitButton"
@@ -142,5 +143,26 @@
         app:layout_constraintEnd_toStartOf="@+id/groupName"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/groups" />
+    <ImageButton
+        android:id="@+id/imageButtonRed"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/dark"
+        app:layout_constraintStart_toEndOf="@+id/imageButtonGreen"
+        app:layout_constraintTop_toBottomOf="@+id/searchField"
+        app:srcCompat="@android:drawable/ic_delete" />
+
+    <ImageButton
+        android:id="@+id/imageButtonGreen"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/dark"
+        app:layout_constraintStart_toEndOf="@+id/searchResult"
+        app:layout_constraintTop_toBottomOf="@+id/searchField"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
