--- a/app/src/main/res/layout/activity_creat_group.xml
+++ b/app/src/main/res/layout/activity_creat_group.xml
@@ -8,7 +8,7 @@
     tools:context=".add_expense">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/grpName"
         android:layout_width="264dp"
         android:layout_height="53dp"
         android:layout_marginTop="88dp"
@@ -77,7 +77,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.678"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/grpName" />
     <EditText
         android:id="@+id/searchField"
         android:layout_width="205dp"
@@ -141,7 +141,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@+id/groupName"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/grpName"
         app:srcCompat="@drawable/groups" />
     <ImageButton
         android:id="@+id/imageButtonRed"
