--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -8,7 +8,7 @@
     tools:context=".add_expense">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/grpName"
         android:layout_width="264dp"
         android:layout_height="53dp"
         android:layout_marginTop="68dp"
@@ -42,94 +42,11 @@
         android:id="@+id/groupIco1"
         android:layout_width="62dp"
         android:layout_height="57dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="67dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/grpName"
         app:srcCompat="@drawable/groups" />
-
-    <TextView
-        android:id="@+id/members1"
-        android:layout_width="106dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="Members"
-        android:textAlignment="inherit"
-        android:textColor="@color/primary"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.626"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/group1" />
-
-    <TextView
-        android:id="@+id/group1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="Group 1 Name"
-        android:textColor="#fafafa"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.638"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-
-    <ImageView
-        android:id="@+id/groupIco2"
-        android:layout_width="62dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="56dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groupIco1"
-        app:srcCompat="@drawable/groups" />
-
-    <TextView
-        android:id="@+id/group2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="Group 1 Name"
-        android:textColor="#fafafa"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.638"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/members1" />
-
-    <TextView
-        android:id="@+id/members2"
-        android:layout_width="106dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="Members"
-        android:textAlignment="inherit"
-        android:textColor="@color/primary"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.626"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/group2" />
-
-    <TextView
-        android:id="@+id/group3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="Group 1 Name"
-        android:textColor="#fafafa"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.638"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/members2" />
 
     <TextView
         android:id="@+id/members3"
@@ -142,20 +59,102 @@
         android:textColor="@color/primary"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.626"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.143"
+        app:layout_constraintStart_toEndOf="@+id/groupIco3"
         app:layout_constraintTop_toBottomOf="@+id/group3" />
+
+    <TextView
+        android:id="@+id/group3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="Group 1 Name"
+        android:textColor="#fafafa"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintStart_toEndOf="@+id/groupIco3"
+        app:layout_constraintTop_toBottomOf="@+id/members2" />
 
     <ImageView
         android:id="@+id/groupIco3"
         android:layout_width="62dp"
         android:layout_height="57dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="60dp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/groupIco2"
         app:srcCompat="@drawable/groups" />
+
+    <TextView
+        android:id="@+id/members1"
+        android:layout_width="106dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="Members"
+        android:textAlignment="inherit"
+        android:textColor="@color/primary"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.131"
+        app:layout_constraintStart_toEndOf="@+id/groupIco1"
+        app:layout_constraintTop_toBottomOf="@+id/group1" />
+
+    <TextView
+        android:id="@+id/group2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="Group 1 Name Travel"
+        android:textColor="#fafafa"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.203"
+        app:layout_constraintStart_toEndOf="@+id/groupIco2"
+        app:layout_constraintTop_toBottomOf="@+id/members1" />
+
+    <ImageView
+        android:id="@+id/groupIco2"
+        android:layout_width="62dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/groupIco1"
+        app:srcCompat="@drawable/groups" />
+
+    <TextView
+        android:id="@+id/members2"
+        android:layout_width="106dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="Members"
+        android:textAlignment="inherit"
+        android:textColor="@color/primary"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.143"
+        app:layout_constraintStart_toEndOf="@+id/groupIco2"
+        app:layout_constraintTop_toBottomOf="@+id/group2" />
+
+    <TextView
+        android:id="@+id/group1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="Group 1 Name travel"
+        android:textColor="#fafafa"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toEndOf="@+id/groupIco1"
+        app:layout_constraintTop_toBottomOf="@+id/grpName" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
