--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -69,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:fontFamily="@font/montserrat_bold"
+        android:onClick="onGrpClick"
         android:text="Group 1 Name"
         android:textColor="#fafafa"
         android:textSize="16sp"
@@ -109,6 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:fontFamily="@font/montserrat_bold"
+        android:onClick="onGrpClick"
         android:text="Group 1 Name Travel"
         android:textColor="#fafafa"
         android:textSize="16sp"
@@ -148,6 +150,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:fontFamily="@font/montserrat_bold"
+        android:onClick="onGrpClick"
         android:text="Group 1 Name travel"
         android:textColor="#fafafa"
         android:textSize="16sp"
