--- a/app/src/main/res/layout/activity_split_expense.xml
+++ b/app/src/main/res/layout/activity_split_expense.xml
@@ -23,18 +23,37 @@
 
     <EditText
         android:id="@+id/editTextDate"
-        android:layout_width="257dp"
+        android:layout_width="120dp"
         android:layout_height="60dp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:hint="Select Date"
         android:inputType="date"
         android:textColor="#FAFAFA"
-        android:textColorHint="#9A9A9A"
+        android:textColorHint="#a3a3a3"
         app:layout_constraintBottom_toTopOf="@+id/groupName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.254"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/grpName"
-        app:layout_constraintVertical_bias="0.659" />
+        app:layout_constraintVertical_bias="0.738" />
+
+    <EditText
+        android:id="@+id/editTextTIme"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:fontFamily="@font/montserrat"
+        android:hint="Select Time"
+        android:inputType="date"
+        android:textColor="#FAFAFA"
+        android:textColorHint="#a3a3a3"
+        app:layout_constraintBottom_toTopOf="@+id/groupName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.738"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/grpName"
+        app:layout_constraintVertical_bias="0.738" />
 
     <EditText
         android:id="@+id/groupName"
@@ -59,7 +78,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Split With :"
-        android:textColor="#FAFAFA"
+        android:textColor="#a3a3a3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/amount" />
 
