--- a/app/src/main/res/layout/activity_creat_group.xml
+++ b/app/src/main/res/layout/activity_creat_group.xml
@@ -31,7 +31,7 @@
         android:text="Add Members"
         android:textColor="#FAFAFA"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groupName" />
+        app:layout_constraintTop_toBottomOf="@+id/loanDesc" />
 
 
 
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/searchField" />
 
     <EditText
-        android:id="@+id/groupName"
+        android:id="@+id/loanDesc"
         android:layout_width="184dp"
         android:layout_height="51dp"
         android:layout_marginTop="72dp"
@@ -107,7 +107,7 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
     <Button
-        android:id="@+id/creatGroup"
+        android:id="@+id/reqLoan"
         android:layout_width="254dp"
         android:layout_height="56dp"
         android:layout_marginBottom="84dp"
@@ -140,7 +140,7 @@
         android:layout_height="74dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/groupName"
+        app:layout_constraintEnd_toStartOf="@+id/loanDesc"
         app:layout_constraintTop_toBottomOf="@+id/grpName"
         app:srcCompat="@drawable/groups" />
     <ImageButton
