--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -117,6 +117,7 @@
         android:layout_width="141dp"
         android:layout_height="75dp"
         android:background="@drawable/rounded_corners"
+        android:onClick="onClick"
         android:text="Create Group"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
@@ -146,6 +147,7 @@
         android:layout_width="141dp"
         android:layout_height="75dp"
         android:background="@drawable/rounded_corners"
+        android:onClick="onClick"
         android:text="Request Loan"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
