--- a/app/src/main/res/layout/activity_req_loan.xml
+++ b/app/src/main/res/layout/activity_req_loan.xml
@@ -125,48 +125,20 @@
         app:tint="@color/primary" />
 
     <Button
-        android:id="@+id/submitButton"
-        android:layout_width="254dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="84dp"
-        android:background="@drawable/rounded_corners"
-        android:text="SPLIT"
-        android:textColor="#1B1B1B"
-        app:backgroundTint="@color/primary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/reqLoan"
-        android:layout_width="254dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="84dp"
-        android:background="@drawable/rounded_corners"
-        android:text="SPLIT"
-        android:textColor="#1B1B1B"
-        app:backgroundTint="@color/primary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
         android:id="@+id/submitBut"
         android:layout_width="254dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginTop="88dp"
         android:background="@drawable/rounded_corners"
         android:text="Send Request"
         android:textColor="#1B1B1B"
         app:backgroundTint="@color/primary"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchResult" />
 
-<!--    <ImageButton-->
+    <!--    <ImageButton-->
 <!--        android:id="@+id/imageButtonRed"-->
 <!--        android:layout_width="25dp"-->
 <!--        android:layout_height="25dp"-->
